@@ -24,12 +24,11 @@ import com.github.rholder.retry.RetryerBuilder;
 import com.github.rholder.retry.StopStrategies;
 import com.github.rholder.retry.WaitStrategies;
 import com.google.common.base.Strings;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.Maps;
 import com.google.common.util.concurrent.ThreadFactoryBuilder;
 import org.graylog.failure.FailureSubmissionService;
 import org.graylog.testing.elasticsearch.ElasticsearchBaseTest;
 import org.graylog2.indexer.IndexSet;
+import org.graylog2.indexer.TestIndexSet;
 import org.graylog2.indexer.results.ResultMessage;
 import org.graylog2.plugin.Message;
 import org.graylog2.system.processing.ProcessingStatusRecorder;
@@ -49,7 +48,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.Callable;
 import java.util.concurrent.CountDownLatch;
@@ -131,10 +129,11 @@ public abstract class MessagesIT extends ElasticsearchBaseTest {
         // Check if we can index about 300MB of messages (once the large batch gets split up)
         final int MESSAGECOUNT = 101;
         // Each Message is about 1 MB
-        final List<Map.Entry<IndexSet, Message>> largeMessageBatch = createMessageBatch(1024 * 1024, MESSAGECOUNT);
-        final Set<String> failedItems = this.messages.bulkIndex(largeMessageBatch);
+        final List<MessageWithIndex> largeMessageBatch = createMessageBatch(1024 * 1024, MESSAGECOUNT);
+        var results = this.messages.bulkIndex(largeMessageBatch);
 
-        assertThat(failedItems).isEmpty();
+        assertThat(results.errors()).isEmpty();
+        assertThat(results.successes()).hasSize(MESSAGECOUNT);
 
         Thread.sleep(2000); // wait for ES to finish indexing
 
@@ -150,11 +149,12 @@ public abstract class MessagesIT extends ElasticsearchBaseTest {
     public void unevenTooLargeBatchesGetSplitUp() throws Exception {
         final int MESSAGECOUNT = 100;
         final int LARGE_MESSAGECOUNT = 20;
-        final List<Map.Entry<IndexSet, Message>> messageBatch = createMessageBatch(1024, MESSAGECOUNT);
+        final List<MessageWithIndex> messageBatch = createMessageBatch(1024, MESSAGECOUNT);
         messageBatch.addAll(createMessageBatch(1024 * 1024 * 5, LARGE_MESSAGECOUNT));
-        final Set<String> failedItems = this.messages.bulkIndex(messageBatch);
+        var results = this.messages.bulkIndex(messageBatch);
 
-        assertThat(failedItems).isEmpty();
+        assertThat(results.errors()).isEmpty();
+        assertThat(results.successes()).hasSize(MESSAGECOUNT + LARGE_MESSAGECOUNT);
 
         client().refreshNode(); // wait for ES to finish indexing
 
@@ -169,16 +169,35 @@ public abstract class MessagesIT extends ElasticsearchBaseTest {
         final Message message2 = new Message("Another message", "loghost-b", now());
         message2.addField(fieldName, "fourty-two");
 
-        final List<Map.Entry<IndexSet, Message>> messageBatch = ImmutableList.of(
-                entry(indexSet, message1),
-                entry(indexSet, message2)
+        final List<MessageWithIndex> messageBatch = List.of(
+                new MessageWithIndex(message1, indexSet),
+                new MessageWithIndex(message2, indexSet)
         );
 
-        final Set<String> failedItems = this.messages.bulkIndex(messageBatch);
+        var results = this.messages.bulkIndex(messageBatch);
 
-        assertThat(failedItems).hasSize(1);
+        assertThat(results.errors()).hasSize(1);
 
         verify(failureSubmissionService).submitIndexingErrors(argThat(arg -> arg.size() == 1));
+    }
+
+    @Test
+    public void messagesWithTheSameIdCanBeIngestedIntoMultipleIndices() {
+        final Message message1 = new Message(Map.of("_id", "1234", "message", "One message", "source", "loghost-a", "timestamp", now()));
+        final Message message2 = new Message(Map.of("_id", "1234", "message", "One message", "source", "loghost-a", "timestamp", now()));
+
+        final TestIndexSet indexSet2 = new TestIndexSet(indexSet.getConfig().toBuilder().indexPrefix("message_it2").build());
+        client().createIndex("message_it2_deflector");
+        client().waitForGreenStatus("message_it2_deflector");
+
+        final List<MessageWithIndex> messageBatch = List.of(
+                new MessageWithIndex(message1, indexSet),
+                new MessageWithIndex(message2, indexSet2)
+        );
+        var results = this.messages.bulkIndex(messageBatch);
+
+        assertThat(results.errors()).hasSize(0);
+        assertThat(results.successes()).hasSize(2);
     }
 
     @Test
@@ -186,17 +205,17 @@ public abstract class MessagesIT extends ElasticsearchBaseTest {
         triggerFloodStage(INDEX_NAME);
         final CountDownLatch countDownLatch = new CountDownLatch(1);
         final AtomicBoolean succeeded = new AtomicBoolean(false);
-        final List<Map.Entry<IndexSet, Message>> messageBatch = createMessageBatch(1024, 50);
+        final List<MessageWithIndex> messageBatch = createMessageBatch(1024, 50);
 
-        final Future<Set<String>> result = background(() -> this.messages.bulkIndex(messageBatch, createIndexingListener(countDownLatch, succeeded)));
+        final Future<IndexingResults> resultsFuture = background(() -> this.messages.bulkIndex(messageBatch, createIndexingListener(countDownLatch, succeeded)));
 
         countDownLatch.await();
 
         resetFloodStage(INDEX_NAME);
         waitForClusterBlockRelease();
 
-        final Set<String> failedItems = result.get(3, TimeUnit.MINUTES);
-        assertThat(failedItems).isEmpty();
+        var results = resultsFuture.get(3, TimeUnit.MINUTES);
+        assertThat(results.errors()).isEmpty();
 
         client().refreshNode();
 
@@ -246,18 +265,18 @@ public abstract class MessagesIT extends ElasticsearchBaseTest {
         client().addAliasMapping(index1, INDEX_NAME);
         client().addAliasMapping(index2, INDEX_NAME);
 
-        final List<Map.Entry<IndexSet, Message>> messageBatch = createMessageBatch(1024, 50);
+        final ArrayList<MessageWithIndex> messageBatch = createMessageBatch(1024, 50);
         final CountDownLatch countDownLatch = new CountDownLatch(1);
         final AtomicBoolean succeeded = new AtomicBoolean(false);
 
-        final Future<Set<String>> result = background(() -> this.messages.bulkIndex(messageBatch, createIndexingListener(countDownLatch, succeeded)));
+        final Future<IndexingResults> resultsFuture = background(() -> this.messages.bulkIndex(messageBatch, createIndexingListener(countDownLatch, succeeded)));
 
         countDownLatch.await();
 
         client().removeAliasMapping(index2, INDEX_NAME);
 
-        final Set<String> failedItems = result.get(3, TimeUnit.MINUTES);
-        assertThat(failedItems).isEmpty();
+        var results = resultsFuture.get(3, TimeUnit.MINUTES);
+        assertThat(results.errors()).isEmpty();
 
         client().refreshNode();
 
@@ -269,13 +288,13 @@ public abstract class MessagesIT extends ElasticsearchBaseTest {
     public void properlySerializesCustomObjectsInMessageField() throws IOException {
         final Message message = new Message("Some message", "somesource", now());
         message.addField("custom_object", new TextNode("foo"));
-        final List<Map.Entry<IndexSet, Message>> messageBatch = ImmutableList.of(
-                Maps.immutableEntry(indexSet, message)
+        final List<MessageWithIndex> messageBatch = List.of(
+                new MessageWithIndex(message, indexSet)
         );
 
-        final Set<String> failedItems = this.messages.bulkIndex(messageBatch);
+        var results = this.messages.bulkIndex(messageBatch);
 
-        assertThat(failedItems).isEmpty();
+        assertThat(results.errors()).isEmpty();
 
         client().refreshNode();
 
@@ -284,7 +303,7 @@ public abstract class MessagesIT extends ElasticsearchBaseTest {
         assertThat(resultMessage.getMessage().getField("custom_object")).isEqualTo("foo");
     }
 
-    private Future<Set<String>> background(Callable<Set<String>> task) {
+    private Future<IndexingResults> background(Callable<IndexingResults> task) {
         final ExecutorService executor = Executors.newFixedThreadPool(1,
                 new ThreadFactoryBuilder().setNameFormat("messages-it-%d").build());
 
@@ -315,12 +334,12 @@ public abstract class MessagesIT extends ElasticsearchBaseTest {
         return DateTime.now(DateTimeZone.UTC);
     }
 
-    private ArrayList<Map.Entry<IndexSet, Message>> createMessageBatch(int size, int count) {
-        final ArrayList<Map.Entry<IndexSet, Message>> messageList = new ArrayList<>();
+    private ArrayList<MessageWithIndex> createMessageBatch(int size, int count) {
+        final ArrayList<MessageWithIndex> messageList = new ArrayList<>();
 
         final String message = Strings.repeat("A", size);
         for (int i = 0; i < count; i++) {
-            messageList.add(Maps.immutableEntry(indexSet, new Message(i + message, "source", now())));
+            messageList.add(new MessageWithIndex(new Message(i + message, "source", now()), indexSet));
         }
         return messageList;
     }
